--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -1,10 +1,12 @@
 .array-container {
     position: absolute;
     left: 100px;
+    top: 100px;
 }
 
 .array-bar {
     width: 2px;
     display: inline-block;
     margin: 0 1px;
+    background-color: 'blue';
 }
